# mavedb-variant-lookup

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: clingen_client.py  mavedb_client.py  mavedb_lookup.py
